# jarvis-ai-assistant

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: settings.json
jarvis/: __init__.py  app.py
jarvis/agents/: browser_agent.py  desktop_agent.py  file_agent.py  notification_agent.py  scheduler_agent.py
jarvis/api/: server.py
jarvis/core/: brain.py  permission_system.py  task_planner.py  tool_executor.py
jarvis/gui/: dev_console.py  main_window.py  memory_manager_ui.py  mic_indicator.py  notifications_panel.py  orb_widget.py  settings_window.py  system_tray.py  task_dashboard.py  voice_panel.py
jarvis/gui/styles/: animations.py  dark_theme.qss
jarvis/memory/: memory_manager.py
jarvis/plugins/: base_plugin.py  loader.py
jarvis/tools/: app_tools.py  file_tools.py  registry.py  system_tools.py  web_tools.py
jarvis/utils/: config.py  logger.py  startup.py  updater.py
jarvis/voice/: stt.py  tts.py  wake_word.py
scratch/: setup_shortcut.py
tests/: test_memory.py
